<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainMenu" >
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <Button
	        android:id="@+id/track_position_main_menu_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="startTrackPosition"
	        android:text="@string/title_activity_track_position" />
	    
	    <Button
	        android:id="@+id/services_around_main_menu_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/track_position_main_menu_button"
	        android:layout_below="@+id/track_position_main_menu_button"
	        android:onClick="startServicesAround"
	        android:text="@string/title_activity_services_around" />
	    
	    <Button
	        android:id="@+id/currency_converter_main_menu_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/services_around_main_menu_button"
	        android:layout_below="@+id/services_around_main_menu_button"
	        android:onClick="startCurrencyConverter"
	        android:text="@string/title_activity_currency_converter" />
	    
	    <Button
	        android:id="@+id/translator_main_menu_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/currency_converter_main_menu_button"
	        android:layout_below="@+id/currency_converter_main_menu_button"
	        android:onClick="startTranslator"
	        android:text="@string/title_activity_translator" />
	    
	    <Button
	        android:id="@+id/information_sharing_main_menu_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/translator_main_menu_button"
	        android:layout_below="@+id/translator_main_menu_button"
	        android:onClick="startInformationSharing"
	        android:text="@string/title_activity_information_sharing" />
	    
	    <Button
	        android:id="@+id/costs_logger_main_menu_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/information_sharing_main_menu_button"
	        android:layout_below="@+id/information_sharing_main_menu_button"
	        android:onClick="startCostsLogger"
	        android:text="@string/title_activity_costs_logger" />
	    
	    <Button
	        android:id="@+id/settings_main_menu_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/costs_logger_main_menu_button"
	        android:layout_below="@+id/costs_logger_main_menu_button"
	        android:onClick="startSettings"
	        android:text="@string/title_activity_settings" />
	    
	</RelativeLayout>
	
</ScrollView>