<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".AddRecordActivity" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	    <TextView
	        android:id="@+id/amount_input_field_label"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/amount_input_field_label_text" />
	    <EditText
	    	android:id="@+id/amount_input_field"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/amount_input_field_label"
		    android:hint="@string/amount_input_field_hint"
		    android:inputType="numberDecimal" />
	    <TextView
	        android:id="@+id/currency_spinner_label"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/amount_input_field"
		    android:text="@string/currency_spinner_label_text" />
	    <LinearLayout
	        android:id="@+id/currency_layout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
		    android:layout_below="@id/currency_spinner_label" >
	        <Spinner
		        android:id="@+id/currency_spinner"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".80" />
	        <Button
	            android:id="@+id/addCurrencyButton"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight=".20"
	            android:onClick="onClick"
	            android:text="@string/plus_text" />
	    </LinearLayout>
	    <TextView
	        android:id="@+id/category_spinner_label"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/currency_layout"
		    android:text="@string/category_spinner_label_text" />
	    <LinearLayout
	        android:id="@+id/category_spinner_layout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/category_spinner_label" >
	        <Spinner
		        android:id="@+id/category_spinner"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".80" />
	        <Button
	            android:id="@+id/addCategoryButton"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight=".20"
	            android:onClick="onClick"
	            android:text="@string/plus_text" />
	    </LinearLayout>
	    <TextView
		        android:id="@+id/journey_spinner_label"
		        android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/category_spinner_layout"
			    android:text="@string/journey_spinner_label_text" />
	    <LinearLayout
	        android:id="@+id/journey_layout"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_below="@id/journey_spinner_label" >
		    <Spinner
		        android:id="@+id/journey_spinner"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".80" />
		    <Button
		        android:id="@+id/addJourneyButton"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight=".20"
	            android:onClick="onClick"
	            android:text="@string/plus_text" />
	    </LinearLayout>
	    <TextView
		        android:id="@+id/date_and_time_label"
		        android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/journey_layout"
			    android:text="@string/info_date" />
	    <LinearLayout
	        android:id="@+id/date_and_time_layout"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_below="@id/date_and_time_label"
		    android:layout_marginBottom="20dp" >
		    <Button
		        android:id="@+id/date_button"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".60"
		        android:onClick="onClick" />
		    <Button
		        android:id="@+id/time_button"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight=".40"
	            android:onClick="onClick" />
	    </LinearLayout>
	    <Button android:id="@+id/save_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/date_and_time_layout"
	        android:onClick="saveRecord"
	        android:text="@string/save_button_text" />
	</RelativeLayout>
</ScrollView>