<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
 
    <EditText
        android:id="@+id/new_category_name_field"
        android:hint="@string/new_category_name_field_hint"
        android:inputType="textCapSentences"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_category_name_field"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true" >
        
	    <Button
	        android:id="@+id/new_category_ok_button"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/ok_button"
	        android:layout_weight=".50" />
	    <Button
	        android:id="@+id/new_category_cancel_button"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel_button"
	        android:layout_weight=".50" />
    </LinearLayout>
 
</RelativeLayout>