<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FilterRecordActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	    <TextView
	        android:id="@+id/filter_category_label"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/category_filter_label" />
	    <LinearLayout
	        android:id="@+id/layoutCategory"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/filter_category_label" >
		    <CheckBox
		        android:id="@+id/boxCategory"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".15" />
		    <Spinner
		        android:id="@+id/spinCategory"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".85" />
	    </LinearLayout>
	    <TextView
	        android:id="@+id/filter_currency_label"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/layoutCategory"
		    android:text="@string/currency_filter_label" />
	    <LinearLayout
	        android:id="@+id/layoutCurrency"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/filter_currency_label" >
		    <CheckBox
		        android:id="@+id/boxCurrency"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".15" />
		    <Spinner
		        android:id="@+id/spinCurrency"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".85" />
	    </LinearLayout>
	    <TextView
	        android:id="@+id/filter_journey_label"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/layoutCurrency"
		    android:text="@string/journey_filter_label" />
	    <LinearLayout
	        android:id="@+id/layoutJourney"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/filter_journey_label" >
		    <CheckBox
		        android:id="@+id/boxJourney"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".15" />
		    <Spinner
		        android:id="@+id/spinJourney"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".85" />
	    </LinearLayout>
	    <TextView
	        android:id="@+id/filter_order_by_label"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/layoutJourney"
		    android:text="@string/order_by_filter_label" />
	    <LinearLayout
	        android:id="@+id/layoutOrderBy"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/filter_order_by_label" >
	        <CheckBox
		        android:id="@+id/boxOrderBy"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".15" />
		    <Spinner
		        android:id="@+id/spinOrderBy"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".85" />
	    </LinearLayout>
	    <TextView
		    android:id="@+id/filter_date_from_label"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/layoutOrderBy"
		    android:text="@string/date_from_filter_label" />
	    <LinearLayout
	        android:id="@+id/layoutDateFrom"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/filter_date_from_label" >
	        <CheckBox
		        android:id="@+id/boxDateFrom"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".15" />
		    <Button
		        android:id="@+id/buttonDateFrom"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:onClick="showDatePickerDialogFrom"
		        android:layout_weight=".85" />
		</LinearLayout>
		<TextView
		    android:id="@+id/filter_date_to_label"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/layoutDateFrom"
		    android:text="@string/date_to_filter_label" />
		<LinearLayout
	        android:id="@+id/layoutDateTo"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/filter_date_to_label" >
	        <CheckBox
		        android:id="@+id/boxDateTo"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".15" />
		    <Button
		        android:id="@+id/buttonDateTo"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".85"
		        android:onClick="showDatePickerDialogTo" />
		</LinearLayout>
		<TextView
		    android:id="@+id/filter_amount_from_label"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/layoutDateTo"
		    android:text="@string/amount_from_filter_label" />
	    <LinearLayout
	        android:id="@+id/layoutAmountFrom"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/filter_amount_from_label" >
	        <CheckBox
		        android:id="@+id/boxAmountFrom"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".15" />
		    <EditText
		        android:id="@+id/textAmountFrom"
		        android:inputType="numberDecimal"
		        android:hint="@string/amount_from_filter_hint"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".85" />
		</LinearLayout>
		<TextView
		    android:id="@+id/filter_amount_to_label"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/layoutAmountFrom"
		    android:text="@string/amount_to_filter_label" />
		<LinearLayout
	        android:id="@+id/layoutAmountTo"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/filter_amount_to_label" >
	        <CheckBox
		        android:id="@+id/boxAmountTo"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".15" />
		    <EditText
		        android:id="@+id/textAmountTo"
		        android:inputType="numberDecimal"
		        android:hint="@string/amount_to_filter_hint"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".85" />
		</LinearLayout>
		<LinearLayout
	        android:id="@+id/layoutConvert"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dp"
	        android:layout_below="@id/layoutAmountTo" >
	        <CheckBox
		        android:id="@+id/boxConvert"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".15" />
		    <TextView
		        android:id="@+id/textConvert"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight=".85"
		        android:text="Převést částky do domovské měny" />
		</LinearLayout>
	    <Button
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:onClick="zobraz"
	        android:layout_below="@id/layoutConvert"
	        android:text="@string/show_filtered" />
	</RelativeLayout>
</ScrollView>